log/build_2025-03-19_07-13-34/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishturn.py", line 8
    import gpiozero import PWMOutputDevice
                    ^^^^^^
SyntaxError: invalid syntax

